--- a/form-validate/index.html
+++ b/form-validate/index.html
@@ -60,6 +60,7 @@
         </div>
     </div>
 
+    <div class="test"></div>
     <div id="successPopup" class="popup">
         <div class="popup-content">
             <h2>Đăng ký thành công!</h2>
